# truemess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
client/: CMakeLists.txt
client/extlibs/x64/: pdcurses.lib
client/extlibs/x86/: pdcurses.lib
client/include/Truemess/Memory/: MemoryManager.h  ObjectPool.h  Resource.h
client/include/Truemess/System/: Core.h  Object.h  SmartString.h  State.h  StateManager.h  Truelogger.h  Utf.h  Vector.h  Vector.inl
client/include/XCurses/: XCurses.h  XWindow.h
client/src/: main.cpp  test.cpp  test.h
client/src/Truemess/Memory/: ObjectPool.cpp  Resource.cpp
client/src/Truemess/System/: Core.cpp  Object.cpp  SmartString.cpp  Vector.cpp
client/src/XCurses/: XCurses.cpp  XWindow.cpp
client/test/: TestMain.h  WindowTest.h
server/: CMakeLists.txt
server/extlibs/x64/: sqlite3.lib  sqlite3pp.lib
server/extlibs/x86/: sqlite3.lib  sqlite3pp.lib
server/src/: main.cpp
server/src/Core/: Core.cpp  Core.h
server/src/Managers/: DatabaseManager.cpp  DatabaseManager.h  NetworkManager.cpp  NetworkManager.h  RoomManager.cpp  RoomManager.h  UserManager.cpp  UserManager.h
server/src/Stuff/: BaseManager.cpp  BaseManager.h  Manager.h  Stuff.h
