set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	set(CLIENT_LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extlibs/x64)
	set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/x64)
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
	set(CLIENT_LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extlibs/x86)
	set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/x86)
endif()

file(GLOB_RECURSE CLIENT_SRCS
	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

add_definitions(-DPDC_WIDE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)

add_executable(truemess ${CLIENT_SRCS})

target_link_libraries(truemess "${CLIENT_LIBS_DIR}/pdcurses.lib")

